--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -23,6 +23,7 @@
     margin: 19px 0 8px;
 }
 .signup-ip{
+	position: relative;
     width: 100%; height: 51px;
     padding: 10px 110px 10px 14px;
     border: 1px solid #c7c7c7;
