--- a/src/main/resources/static/css/product_list.css
+++ b/src/main/resources/static/css/product_list.css
@@ -174,7 +174,7 @@
     width: 232px; height: 232px;
 }
 .product-name{
-    width: 100%; height: 16px;
+    width: 100%;
     margin-top: 14px;
     padding-right: 26px;
     font-size: 13px;
