--- a/src/main/resources/static/css/admin_producy_upload.css
+++ b/src/main/resources/static/css/admin_producy_upload.css
@@ -27,11 +27,9 @@
     width: 100%; height: 100%;
     margin-left: 200px;
 }
-.img-delete{
-    font-size: 50px;
-}
-.product-upload-img img{
-    width: 300px; height: 300px;
+#preview{
+    max-width: 300px;
+    max-height: 300px;
 }
 .product-info-ip{
     margin: 10px;
@@ -51,4 +49,38 @@
     background-color: #006633;
     border-radius: 50px;
     color: white;
+}
+
+.item-upload{
+    position: relative;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: 900;
+    color: white;
+    padding: 5px 10px;
+    background-color: #006633;
+}
+.item-upload:hover{
+    background-color: #519473;
+}
+.img-delete{
+    top: 495px;
+    left: 780px;
+    position: absolute;
+    display: none;
+    font-size: 20px;
+}
+.item-msg{
+    margin-bottom: 10px;
+}
+.item-msg i{
+    color: blue;
+    font-weight: 900;
+}
+.itemdtl-msg{
+    margin-bottom: 10px;
+}
+.itemdtl-msg i{
+    color: blue;
+    font-weight: 900;
 }
