--- a/src/main/resources/static/css/product_dtl_info.css
+++ b/src/main/resources/static/css/product_dtl_info.css
@@ -416,3 +416,90 @@
 .product-user-info pre{
     width: 100%;
 }
+
+/* ¸®ºä */
+
+.product-review-container{
+    margin: 0 auto;
+    width: 1020px; height: 100%;
+    padding-top: 36px;
+}
+.review-nav{
+    display: flex;
+    justify-content: space-between;
+    width: 100%; height: 23px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #a5a5a5;
+}
+.review-nav strong{
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+}
+.review-nav strong div{
+    margin-left: 5px;
+    font-weight: 900;
+    font-size: 17px;
+}
+.review-order a{
+    height: 15px;
+    padding: 0 13px;
+    font-size: 13px;
+    color: #888888;
+    border-left: 1px solid #dedfe1;
+}
+.review-order a:first-child{
+    border-left: none;
+}
+.product-review{
+    display: flex;
+    justify-content: space-between;
+    width: 100%; height: 133px;
+    padding: 20px 0;
+    box-sizing: border-box;
+}
+
+.review-user-info{
+    display: flex;
+    width: 100%; height: 40px;
+    margin-bottom: 10px;
+}
+.review-user-info img{
+    padding-top: 7px;
+    width: 30px; height: 30px;
+    border-radius: 15px;
+}
+.review-upload{
+    margin-left: 10px;
+}
+.product-review-score{
+    font-size: 18px;
+}
+.product-review-score span{
+    margin-left: 2px;
+    font-size: 16px;
+}
+.uload-info{
+    margin-top: 3px;
+    font-size: 12px;
+    color: #888888;
+}
+.user-review-preview{
+    cursor: pointer;
+}
+.user-review{
+    max-width: 750px;
+    margin-left: 40px;
+    color: #5a5a5a;
+    font-weight: 100;
+    overflow: hidden;
+    word-break: break-all;
+}
+.review-imgs{
+    width: 100px; height: 100%;
+    margin-left: 100px;
+    cursor: pointer;
+}
+.review-imgs img{
+    width: 100%; height: 100%;
+}
