--- a/src/main/resources/static/css/product_list.css
+++ b/src/main/resources/static/css/product_list.css
@@ -199,6 +199,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
 }
 .product-page-num a{
     display: flex;
