--- a/src/main/resources/static/css/product_list.css
+++ b/src/main/resources/static/css/product_list.css
@@ -179,6 +179,9 @@
     padding-right: 26px;
     font-size: 13px;
     box-sizing: border-box;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .product-price{
     width: 100%; height: 17px;
