--- a/src/main/resources/static/css/review_write.css
+++ b/src/main/resources/static/css/review_write.css
@@ -1,209 +1,282 @@
-.review-write-banner{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%; height: 50px;
-    background-color: #006633;
-    color: white;
-    font-weight: 500;
-    font-size: 24px;
+.review-write-banner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 50px;
+	background-color: #006633;
+	color: white;
+	font-weight: 500;
+	font-size: 24px;
 }
-.review-write-container{
-    width: 1020px; height: 100%;
-    margin: 0 auto;
+
+.review-write-container {
+	width: 1020px;
+	height: 100%;
+	margin: 0 auto;
 }
-.photo-review-banner{
-    margin-top: 20px;
+
+.photo-review-banner {
+	margin-top: 20px;
 }
-.photo-review-guide-box{
-    width: 100%; height: 46px;
-    padding: 16px 15px 13px 13px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #5c6686;
-    box-sizing: border-box;
-    cursor: pointer;
+
+.photo-review-guide-box {
+	width: 100%;
+	height: 46px;
+	padding: 16px 15px 13px 13px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #5c6686;
+	box-sizing: border-box;
+	cursor: pointer;
 }
-.photo-review-guide{
-    font-size: 14px;
-    color: white;
-    font-weight: 900;
+
+.photo-review-guide {
+	font-size: 14px;
+	color: white;
+	font-weight: 900;
 }
-.photo-review-guide span{
-    color: yellow;
+
+.photo-review-guide span {
+	color: yellow;
 }
+
 .photo-review-guide-box i {
-    color: white;
-}
-.review-another-guide{
-    width: 100%; height: 70px;
-    padding: 10px 13px 13px;
-    background-color: #5c6686;
-    font-size: 13px;
-    box-sizing: border-box;
-    border-top: 1px solid #747474;
-    color: #cecece;
-}
-.review-another-guide li{
-    width: 100%; height: 23px;
-}
-.review-another-guide li span{
-    color: yellow;
-    font-weight: 900;
+	color: white;
 }
 
-.review-product-info{
-    display: flex;
-    align-items: center;
-    width: 100%; height: 115px;
-    padding: 20px;
-    box-sizing: border-box;
+.review-another-guide {
+	display: none; width : 100%;
+	height: 70px;
+	padding: 10px 13px 13px;
+	background-color: #5c6686;
+	font-size: 13px;
+	box-sizing: border-box;
+	border-top: 1px solid #747474;
+	color: #cecece;
+	width: 100%;
 }
-.review-product-info img{
-    width: 75px; height: 75px;
-    border: 1px solid #ebebeb;
-}
-.review-productdtl-info{
-    padding-left: 14px;   
-}
-.review-productdtl-info p{
-    font-size: 13px;
-    color: #bbbbbb;
 
+.review-another-guide li {
+	width: 100%;
+	height: 23px;
 }
-.review-productdtl-info h2{
-    font-size: 14px;
-    margin-top: 8px;
-    font-weight: 600;
+
+.review-another-guide li span {
+	color: yellow;
+	font-weight: 900;
 }
-.review-product-score{
-    border-top: 1px solid #ebebeb;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+.review-product-info {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 115px;
+	padding: 20px;
+	box-sizing: border-box;
 }
-.review-product-score-msg{
-    height: 49px;
-    padding-top: 28px;
-    font-size: 18px;
-    font-weight: 600;
-    box-sizing: border-box;
+
+.review-product-info img {
+	width: 75px;
+	height: 75px;
+	border: 1px solid #ebebeb;
 }
-.product-score-give-box{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 103px;
-    padding: 30px 0 26px;
-    box-sizing: border-box;
+
+.review-productdtl-info {
+	padding-left: 14px;
 }
-.product-score-give button{
-    font-size: 45px;
-    margin: 0 5px;
-    color: #dfdfdf;
+
+.review-productdtl-info p {
+	font-size: 13px;
+	color: #bbbbbb;
 }
-.product-score-give-box span{
-    margin-top: 6px;
-    font-size: 13px;
-    color: #959595;
+
+.review-productdtl-info h2 {
+	font-size: 14px;
+	margin-top: 8px;
+	font-weight: 600;
 }
-.review-product-write{
-    border-top: 1px solid #ebebeb;
+
+.review-product-score {
+	border-top: 1px solid #ebebeb;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
-.review-product-write-msg{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%; height: 49px;
-    font-size: 18px;
-    padding-top: 28px;
-    box-sizing: border-box;
+
+.review-product-score-msg {
+	height: 49px;
+	padding-top: 28px;
+	font-size: 18px;
+	font-weight: 600;
+	box-sizing: border-box;
 }
-.review-write-box{
-    display: flex;
-    flex-direction: column;
-    height: 150px;
-    margin: 11px 20px 0;
-    padding: 10px 10px 11px;
-    box-sizing: border-box;
-    background-color: #f4f4f4;
-    border: 1px solid #cecece;
+
+.product-score-give-box {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 103px;
+	padding: 30px 0 26px;
+	box-sizing: border-box;
 }
-.review-write{
-    width: 100%; height: 100px;
-    resize: none;
-    background-color: #f4f4f4;
-    color: #999999;
+
+.product-score-give button {
+	font-size: 45px;
+	margin: 0 5px;
+	color: #dfdfdf;
 }
-.review-write::placeholder{
-    color: #999999;
+
+.product-score-give-box span {
+	margin-top: 6px;
+	font-size: 13px;
+	color: #959595;
 }
-.review-write-count{
-    display: flex;
-    justify-content: flex-end;
-    font-size: 15px;
-    color: #959595;
-    margin: 10px 5px 0 0;
+
+.review-product-write {
+	border-top: 1px solid #ebebeb;
 }
-.review-photo-box{
-    width: 100%; height: 153px;
-    padding: 29px 20px;
-    box-sizing: border-box;
+
+.review-product-write-msg {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	max-height: 70px;
+	font-size: 18px;
+	padding-top: 28px;
+	box-sizing: border-box;
+}
+.review-product-write-msg strong{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 200px;
+}
+
+.review-write-box {
+	display: flex;
+	flex-direction: column;
+	height: 150px;
+	margin: 11px 20px 0;
+	padding: 10px 10px 11px;
+	box-sizing: border-box;
+	background-color: #f4f4f4;
+	border: 1px solid #cecece;
+}
+
+.review-write {
+	width: 100%;
+	height: 100px;
+	resize: none;
+	background-color: #f4f4f4;
+	color: #999999;
+}
+
+.review-write::placeholder {
+	color: #999999;
+}
+
+.review-write-count {
+	display: flex;
+	justify-content: flex-end;
+	font-size: 15px;
+	color: #959595;
+	margin: 10px 5px 0 0;
+}
+
+.review-photo-box {
+	width: 100%; min-height: 150px;
+	padding: 29px 20px;
+	box-sizing: border-box;
+	border-bottom: 1px solid #ebebeb;
+}
+
+.review-photo-btn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 65px;
+	font-size: 18px;
+	color: #222222;
+	border: 1px dashed black;
+	cursor: pointer;
+	font-weight: 700;
+}
+
+.review-photo-btn i {
+	margin-right: 5px;
+}
+
+.review-photo-btn:hover {
+	background-color: #f3f4f3;
+}
+
+.review-photo-list{
+	display: flex;
+	align-items: center;
+	margin-top: 12px;
+	flex-wrap: wrap;
 }
 .review-photo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 65px;
-    font-size: 18px;
-    color: #222222;
-    border: 1px dashed black;
-    cursor: pointer;
-    font-weight: 700;
+	position: relative;
+	height: 100%;
+	box-sizing: border-box;
+	padding: 5px;
 }
-.review-photo i {
-    margin-right: 5px;
+.review-photo img{
+	width: 84px; height: 84px;
 }
-.review-photo:hover{
-    background-color: #f3f4f3;
+.review-photo-close {
+	right: 5px;
+	position: absolute;
+	font-size: 24px;
+	color: black;
+	opacity: 0.5;
 }
 .review-photo-box p {
-    height: 19px;
-    font-size: 12px;
-    margin-top: 11px;
-    color: #f43435;
+	height: 19px;
+	font-size: 12px;
+	margin-top: 11px;
+	color: #f43435;
 }
-.product-review-upload{
-    width: 100%; height: 158px;
-    border-top: 1px solid #ebebeb;
+
+.product-review-upload {
+	width: 100%;
+	height: 158px;
 }
-.product-review-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 33px 2px;
+
+.product-review-btn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 33px 2px;
 }
-.product-review-btn button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 180px; height: 40px;
-    padding: 2px;
-    box-sizing: border-box;
-    font-size: 13px;
+
+.product-review-btn button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 180px;
+	height: 40px;
+	padding: 2px;
+	box-sizing: border-box;
+	font-size: 13px;
 }
-.review-cancel-btn{
-    color: #555555;
-    border: 1px solid #c5cbd0;
-    background-color: white;
-    margin-right: 2px;
+
+.review-cancel-btn {
+	color: #555555;
+	border: 1px solid #c5cbd0;
+	background-color: white;
+	margin-right: 2px;
 }
-.review-upload-btn{
-    color: white;
-    border: 1px solid #cecece;
-    background-color: #dadde3;
-    margin-left: 2px;
+
+.review-upload-btn {
+	color: white;
+	border: 1px solid #cecece;
+	background-color: #dadde3;
+	margin-left: 2px;
 }
