--- a/src/main/resources/static/css/mypage_dtl.css
+++ b/src/main/resources/static/css/mypage_dtl.css
@@ -1,6 +1,10 @@
 .container{
 }
 
+.brand-name{
+	cursor: pointer;
+}
+
 .mypage-header{
     width: 100%; height: 95px;
     background-color: #006633;
@@ -125,6 +129,7 @@
     margin: 0 5px;
     font-weight: 900;
 }
+
 .ip-name{
     width: 263px; height: 29px;
     margin-left: 8px;
