--- a/src/main/resources/static/css/mypage_dtl.css
+++ b/src/main/resources/static/css/mypage_dtl.css
@@ -287,6 +287,11 @@
 	box-sizing: border-box;
 }
 
+.password-ip-msg{
+	font-size: 12px;
+	color: red;
+}
+
 .password-ip:last-child {
 	border-top: none;
 }
